--- a/templates/about.html
+++ b/templates/about.html
@@ -5,26 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Count</title>
+    <title>About Page</title>
 </head>
 <body>
-<h1>There are {{ count }} words in your text</h1>
-
-<a href="{% url 'home' %}">Start Again</a>
-
-
-<H1>Your Text:</H1>
-{{ fulltext }}
-
-<h1>Word Count</h1>
-{% for word, counttotal in sortedwords %}
-{{ word }} - {{ counttotal }}
+<h1>About Page</h1>
 <br />
+<p>This is about page for Word Count page that I built for udemy a class</p>
 
-
-
-{% endfor %}
-
+<a href="{% url 'home' %}">Start Page</a>
 
 </body>
 </html>
