--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,9 @@
     <br />
     <input type="submit" value="Count!" />
 </form>
+<a name="bot" href="{% url 'about' %}">About Page</a>
+
 
 </body>
+
 </html>
